--- a/index.html
+++ b/index.html
@@ -7,25 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<!-- Login Section -->
-<div id="login-section" class="section">
-    <h2>Login</h2>
-    <form id="login-form">
-        <input type="text" id="username" placeholder="Username" required><br>
-        <input type="password" id="password" placeholder="Password" required><br>
-        <button type="submit">Login</button>
-    </form>
-    <p>Don't have an account? <a href="#" id="register-link">Register</a></p>
-</div>
-
-<!-- Quote Section -->
-<div id="quote-section" class="section" style="display:none;">
-    <h2>Daily Motivational Quote</h2>
-    <p id="quote">Loading...</p>
-    <button id="logout-btn">Logout</button>
-</div>
-
-<script src="script.js"></script>
+    <div class="container">
+        <h1>
+            Daily Motivator
+        </h1>
+        <p id="quote">
+            Click the Button to get inspired!
+        </p>
+        <button id="new-quote">
+            Get Quote
+        </button>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
